Fix some GUI hanging bugs (exit(), delete()), Add pw strength estimation to GUI